--- a/index.css
+++ b/index.css
@@ -30,3 +30,10 @@
 div {
   border-radius: 80px;
 }
+
+.button1 {
+  box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px,
+    rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 1.0));
+  border-radius: 80px;
+}
