--- a/index.css
+++ b/index.css
@@ -18,11 +18,11 @@
   font-size: 12px;
 }
 
-.p1 {
+.q1 {
   font-size: 15px;
 }
 
-.div21 {
+.main2 {
   box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px,
     rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
 }
